# psycopy

./: .gitignore  LICENSE  MANIFEST.in  METHODOLOGY.md  README.md  ffg  gwer  main.py  poll_active_test.py  poll_test.py  pyproject.toml  requirements.txt  run_experiment.bat  run_experiment.sh  setup_venv.bat  setup_venv.sh
20260529_095759_sub-namdar_session-01/: config.json  events.csv  medoc_events.csv  trials.csv  vad_events.csv
20260529_110745_sub-001_session-01/: config.json  events.csv  medoc_events.csv
portable_pain_cnn/: cnn3_confusion_matrix.csv  cnn3_predictions.csv  cnn3_worst_predictions.csv  cnn_confusion_matrix.csv  cnn_model.pt  cnn_predictions.csv  cnn_worst_predictions.csv  model.py  pain_cnn_model.h5  spec_norm_stats.npz
psycopy/: .gitignore  README.md  __init__.py  audio.py  config.py  features.py  medoc.py  medoc_experiment.py  models.py  practice_demo.py  requirements.txt  run_experiment.py  runtime.py  runtime_logging.py  schedule.py  session.py  stimuli.csv  stimuli.py  storage.py  trial_generator.py  types.py  ui_text.py  utils.py  vad.py  validation.py
scripts/: cnn_analyze.py  ml_segmenter.py  organize_sessions.py  process.py
scripts/old/: cnn3_analyze.py  cnn_analyze.py
tests/: conftest.py  test_audio_crash_safety.py  test_config.py  test_e2e_medoc.py  test_e2e_validation.py  test_features.py  test_features_disabled.py  test_medoc_integration.py  test_medoc_optional.py  test_practice_demo.py  test_process.py  test_storage_and_loggers.py  test_task11_medoc_set_coordination.py  test_task13_entry_point.py  test_vad.py  test_validation.py
tests/fixtures/: mock_medoc.py
